--- a/src/assets/components/Header.css
+++ b/src/assets/components/Header.css
@@ -7,23 +7,78 @@
   border-bottom: 1px solid rgb(196, 196, 196);
 }
 .title {
+  text-decoration: none;
   background: #003049;
   color: white;
-  padding: 3px 5px;
+  padding: 4px 6px;
   border-radius: 5px;
+}
+
+.title:hover {
+  cursor: pointer;
 }
 .title h2 {
   margin: 0px 0px;
 }
-
+.inputContainer {
+  display: flex;
+  justify-content: space-between;
+  width: 50%;
+  background: #fff;
+  height: 30px;
+  border-radius: 5px;
+  border: solid 1px rgb(196, 196, 196);
+}
+.input {
+  display: flex;
+  width: 80%;
+  background: none;
+  border: none;
+  outline: none;
+}
+.inputButton {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: none;
+  width: 40px;
+  background: none;
+  border-left: solid 1px rgb(196, 196, 196);
+}
+.inputButton:hover {
+  cursor: pointer;
+}
+.tabs {
+  display: flex;
+  align-items: center;
+}
 .link {
-  margin-left: 10px;
+  margin-left: 15px;
   text-decoration: none;
   color: black;
   font-weight: bold;
 }
-.tabs .link:hover {
-  color: #ef233c;
+.icon {
+  display: flex;
+  align-items: center;
+  font-size: 20px;
+  transition: 300ms;
+}
+.icon:hover {
+  color: #fca311;
+  transition: 200ms;
+  cursor: pointer;
+}
+.iconDark:hover {
+  cursor: pointer;
+  transform: rotate(360deg);
+  color: white;
+  background: white;
+  border-radius: 10px;
+  transition: 400ms;
+}
+.link:hover {
+  color: #e63946;
   cursor: pointer;
   transition: 150ms;
 }
