--- a/src/assets/components/Header.css
+++ b/src/assets/components/Header.css
@@ -41,7 +41,7 @@
   justify-content: center;
   align-items: center;
   border: none;
-  width: 40px;
+  width: 20%;
   background: none;
   border-left: solid 1px rgb(196, 196, 196);
 }
@@ -64,21 +64,12 @@
   font-size: 20px;
   transition: 300ms;
 }
-.icon:hover {
-  color: #fca311;
-  transition: 200ms;
-  cursor: pointer;
-}
-.iconDark:hover {
-  cursor: pointer;
-  transform: rotate(360deg);
-  color: white;
-  background: white;
-  border-radius: 10px;
-  transition: 400ms;
-}
 .link:hover {
   color: #e63946;
   cursor: pointer;
   transition: 150ms;
+}
+.iconButton {
+  background: none;
+  border: none;
 }
